--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_HEALTH" />
     <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
     <!-- Declare Wear OS compatibility -->
     <uses-feature android:name="android.hardware.type.watch" />
@@ -41,7 +42,6 @@
             </intent-filter>
         </activity>
 
-        <!-- Foreground Sensor Service -->
         <service
             android:name=".service.SensorService"
             android:foregroundServiceType="health"
